--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "displayName": "VibeTrail",
   "description": "Track your coding journey with automatic workspace snapshots",
   "version": "0.0.1",
+  "publisher": "ArjunReddy22",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/arjunbreddy22/VibeTrail.git"
+  },
   "engines": {
     "vscode": "^1.74.0"
   },
