Updated logo name to have no spaces so I could upload to VSCode marketplace

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "onCommand:vibetrail.showTimeline"
   ],
   "main": "./out/extension.js",
-  "icon": "VibeTrail Logo.png",
+  "icon": "vibetrail-logo.png",
   "contributes": {
     "commands": [
       {
