--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "vibetrail",
-  "displayName": "VibeTrail",
+  "displayName": "VibeTrail: Versional Control For Vibe Coding",
   "description": "Effortlessly track your Vibe Coding journey with snapshots, restore points, and AI-powered change analysis—all without cluttering your main Git history. Works on your IDE of choice (Cursor, Windsurf, VSCode, Codeium)",
-  "version": "0.1.1",
+  "version": "0.1.10",
   "publisher": "ArjunReddy22",
   "repository": {
     "type": "git",
@@ -15,8 +15,7 @@
     "Other"
   ],
   "activationEvents": [
-    "onCommand:vibetrail.saveSnapshot",
-    "onCommand:vibetrail.showTimeline"
+    "*"
   ],
   "main": "./out/extension.js",
   "icon": "vibetrail-logo.png",
@@ -51,14 +50,19 @@
     }
   },
   "scripts": {
-    "vscode:prepublish": "npm run compile",
+    "vscode:prepublish": "npm run webpack",
+    "webpack": "webpack --mode production",
+    "webpack-dev": "webpack --mode development",
     "compile": "tsc -p ./",
     "watch": "tsc -watch -p ./"
   },
   "devDependencies": {
     "@types/vscode": "^1.74.0",
     "@types/node": "16.x",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "webpack": "^5.88.0",
+    "webpack-cli": "^5.1.4",
+    "ts-loader": "^9.4.4"
   },
   "dependencies": {
     "simple-git": "^3.19.1",
